<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="Site" Id="{2dfd4d5e-1a1f-4620-973a-caea0fa82a41}">
    <Declaration><![CDATA[{region '#Template'}
	{attribute 'Version' := '5.1.1.0'}
	{attribute 'Tags' := '"LCID": "1031", "Text": "GVL, Publisher, Subscriber"'}
	{attribute 'Tags' := '"LCID": "1033", "Text": "GVL, Publisher, Subscriber"'}
	{attribute 'Using' := '"Type": "Template", "URI": "ST_BA_GeneralSettings"'}
	{attribute 'Using' := '"Type": "Template", "URI": "E_BA_EnergyLvlEx"'}
	{attribute 'Using' := '"Type": "Template", "URI": "E_BA_BuildingMode"'}
	{attribute 'Using' := '"Type": "Template", "URI": "ST_BA_BuildingSunBlind"'}
	{attribute 'Using' := '"Type": "Template", "URI": "ST_BA_BuildingAlarms"'}
	{attribute 'Using' := '"Type": "Template", "URI": "ST_BA_WeatherStation"'}
	{attribute 'Using' := '"Type": "Template", "URI": "ST_BA_Facade"'}		 
	{attribute 'Description' := '"LCID": "1031", "Text": "Ams NetId, Subject"'}
	{attribute 'Description' := '"LCID": "1033", "Text": "Ams NetId, Subject"'}
{endregion}

{attribute 'qualified_only'}
VAR_GLOBAL	
	Self_NetId						: T_BA_MedString	:= '127.0.0.1.1.1';
	ACE01_NetId						: T_BA_MedString	:= Self_NetId;
	ACE02_NetId						: T_BA_MedString	:= Self_NetId;
	ACE03_NetId						: T_BA_MedString	:= Self_NetId;
	ACE04_NetId						: T_BA_MedString	:= Self_NetId;
	ACE05_NetId						: T_BA_MedString	:= Self_NetId;
	                            	
	GeneralSettings_Subject			: T_BA_MedString	:= 'GeneralSettings';	
	GeneralSettings_NetId			: T_BA_MedString	:= ACE01_NetId;	
		                        	
	WeatherStation_Subject			: T_BA_MedString	:= 'WeatherStation';
	WeatherStation_NetId			: T_BA_MedString	:= ACE01_NetId;
                                	
	FacadeNorth_Subject				: T_BA_MedString	:= 'arrFacadeData[1]';
	FacadeNorth_NetId				: T_BA_MedString	:= ACE01_NetId;
	FacadeEast_Subject				: T_BA_MedString	:= 'arrFacadeData[2]';
	FacadeEast_NetId				: T_BA_MedString	:= ACE01_NetId;
	FacadeSouth_Subject				: T_BA_MedString	:= 'arrFacadeData[3]';
	FacadeSouth_NetId				: T_BA_MedString	:= ACE01_NetId;
	FacadeWest_Subject				: T_BA_MedString	:= 'arrFacadeData[4]';
	FacadeWest_NetId				: T_BA_MedString	:= ACE01_NetId;
                                	
	Building_NetId					: T_BA_MedString	:= ACE01_NetId;
	BuildingAlarms_Subject			: T_BA_MedString	:= 'BuildingAlarms';
	BuildingMode_Subject			: T_BA_MedString	:= 'BuildingMode';
	BuildingEnergyLevel_Subject		: T_BA_MedString	:= 'BuildingEnergyLevel';
	BuildingSpRmT_Subject			: T_BA_MedString	:= 'BuildingSpRmT';
	BuildingSunBlind_Subject		: T_BA_MedString	:= 'BuildingSunBlind';
	BuildingLighting_Subject		: T_BA_MedString	:= 'BuildingLighting';
		
	
	stGeneralSettings				: ST_BA_GeneralSettings;	// provided by FB_BA_WeatherData	
	bGeneralSettings_Error			: BOOL;	
	stWeatherStation				: ST_BA_WeatherStation;		// provided by FB_BA_WeatherStation_xxx
	bWeatherStation_Error			: BOOL;
	stBuildingAlarms				: ST_BA_BuildingAlarms;		// provided by FB_BA_BurglarAlarmSystem and FB_BA_FireAlarmSystem
	bBuildingAlarms_Error			: BOOL;
	eBuildingMode					: E_BA_BuildingMode;		// provided by FB_BA_BuildingMode
	bBuildingMode_Error				: BOOL;
	eBuildingEnergyLevel			: E_BA_EnergyLvlEx;			// provided by FB_BA_BuildingEnergyLevel
	bBuildingEnergyLevel_Error		: BOOL;
	stBuildingSpRmT					: ST_BA_SpRmT;				// provided by FB_BA_BuildingSpRmT
	bBuildingSpRmT_Error			: BOOL;
	stBuildingSunBlind				: ST_BA_BuildingSunBlind;	// provided by FB_BA_BuildingSunprotection
	bBuildingSunBlind_Error			: BOOL;
	stBuildingLighting				: ST_BA_BuildingLighting;	// provided by FB_BA_BuildingLighting
	bBuildingLighting_Error			: BOOL;
	eHeatCoolMedium					: E_BA_Medium;				// actual medium running in case of a two-pipe-system
	bHeatCoolMedium_Error			: BOOL;	
	
	arrFacade 						: ARRAY  [1..BA2_Param.nMaxNumberOfFacades] OF ST_BA_Facade; 	//  provided by Array [1..BA2_Param.nMaxNumberOffFacades Of FB_BA_Facade] 
	arrFacade_Error					: ARRAY  [1..BA2_Param.nMaxNumberOfFacades] OF BOOL;
	
	arrAreaLighting					: ARRAY  [1..BA2_Param.nMaxNumberOfAreas]	OF ST_BA_Lighting;	//  provided by Array [1..BA2_Param.nMaxNumberOffFacades Of FB_BA_Lighting] 
END_VAR	]]></Declaration>
  </GVL>
</TcPlcObject>