<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_BA_AdsComServer_Room" Id="{dfa5c561-43c6-4aa0-b664-dc4628b7cadf}" SpecialFunc="None">
    <Declaration><![CDATA[{region '#Template'}
	{attribute 'Version' := '5.1.0.0'}
	{attribute 'Tags' := '"LCID": "1031", "Text": "Gebäudeautomation, Kommunikation, Server, Client, Publisher, Subscriber"'}
	{attribute 'Tags' := '"LCID": "1033", "Text": "Building automation, Communication, Server, Client, Publisher, Subscriber"'}
	{attribute 'Using' := '"Type": "Template", "URI": "Site"'}
	{attribute 'Description' := '"LCID": "1031", "Text": "Server Datenkommunikation"'}
	{attribute 'Description' := '"LCID": "1033", "Text": "Server data communication"'}
{endregion}

FUNCTION_BLOCK FB_BA_AdsComServer_Room
VAR_INPUT CONSTANT
  	BuildingEnergyLevel		: FB_BA_RawPublisher;
	BuildingSpRmT			: FB_BA_RawPublisher;
	BuildingLighting		: FB_BA_RawPublisher;
END_VAR
]]></Declaration>
    <Implementation>
      <CFC>
        <XmlArchive>
          <Data>
            <o xml:space="preserve" t="CFCImplementationObject">
              <o n="Items" t="CFCItemList">
                <l2 n="InnerList">
                  <o t="CFCConnection">
                    <v n="Bounds">"-3, -38, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="SourcePinId">382L</v>
                    <v n="DestPinId">385L</v>
                    <v n="Id">390L</v>
                  </o>
                  <o t="CFCConnection">
                    <v n="Bounds">"0, 0, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="SourcePinId">171L</v>
                    <v n="DestPinId">165L</v>
                    <v n="Id">173L</v>
                  </o>
                  <o t="CFCConnection">
                    <v n="Bounds">"0, 0, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="SourcePinId">133L</v>
                    <v n="DestPinId">127L</v>
                    <v n="Id">135L</v>
                  </o>
                  <o t="CFCInputElement">
                    <o n="Output" t="CFCOutputPin">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Negated">false</v>
                      <v n="SetReset" t="SetReset">None</v>
                      <v n="SetResetRef" t="SetResetRef">None</v>
                      <v n="PretendsToBeConnected">false</v>
                      <v n="Id">133L</v>
                    </o>
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"Site.eBuildingEnergyLevel"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">134L</v>
                    </o>
                    <v n="PageArea">3</v>
                    <v n="Bounds">"4, 6, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">132L</v>
                  </o>
                  <o t="CFCBoxElement">
                    <o n="Inputs" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCInputPin">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="IsExtensiblePin">false</v>
                          <v n="ProcessValue">""</v>
                          <v n="Access" t="ProcessValueAccess">None</v>
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">127L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Outputs" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <o n="Texts" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCText">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"xData"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">128L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"FB_BA_RawPublisher"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">129L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"BuildingEnergyLevel"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">130L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Parameters" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCParameter">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Identifier">"bEnPublish"</v>
                          <n n="Value" />
                          <n n="InitialValue" />
                          <o n="Type" t="BoolType">
                            <v n="Compiled">false</v>
                          </o>
                          <v n="Origin" t="ParameterOrigin">Project</v>
                          <v n="Id">131L</v>
                        </o>
                      </l2>
                    </o>
                    <n n="PreparedParameters" />
                    <v n="PageArea">0</v>
                    <v n="Bounds">"18, 4, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="EnEno">false</v>
                    <v n="KindOfCall" t="KindOfCall">FunctionBlock</v>
                    <v n="ContainsExtensibleInputs">false</v>
                    <v n="Forced">false</v>
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">126L</v>
                  </o>
                  <o t="CFCInputElement">
                    <o n="Output" t="CFCOutputPin">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Negated">false</v>
                      <v n="SetReset" t="SetReset">None</v>
                      <v n="SetResetRef" t="SetResetRef">None</v>
                      <v n="PretendsToBeConnected">false</v>
                      <v n="Id">171L</v>
                    </o>
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"Site.stBuildingSpRmT"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">172L</v>
                    </o>
                    <v n="PageArea">3</v>
                    <v n="Bounds">"4, 12, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">170L</v>
                  </o>
                  <o t="CFCBoxElement">
                    <o n="Inputs" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCInputPin">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="IsExtensiblePin">false</v>
                          <v n="ProcessValue">""</v>
                          <v n="Access" t="ProcessValueAccess">None</v>
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">165L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Outputs" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <o n="Texts" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCText">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"xData"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">166L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"FB_BA_RawPublisher"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">167L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"BuildingSpRmT"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">168L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Parameters" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCParameter">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Identifier">"bEnPublish"</v>
                          <n n="Value" />
                          <n n="InitialValue" />
                          <o n="Type" t="BoolType">
                            <v n="Compiled">false</v>
                          </o>
                          <v n="Origin" t="ParameterOrigin">Project</v>
                          <v n="Id">169L</v>
                        </o>
                      </l2>
                    </o>
                    <n n="PreparedParameters" />
                    <v n="PageArea">0</v>
                    <v n="Bounds">"18, 10, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="EnEno">false</v>
                    <v n="KindOfCall" t="KindOfCall">FunctionBlock</v>
                    <v n="ContainsExtensibleInputs">false</v>
                    <v n="Forced">false</v>
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">164L</v>
                  </o>
                  <o t="CFCInputElement">
                    <o n="Output" t="CFCOutputPin">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Negated">false</v>
                      <v n="SetReset" t="SetReset">None</v>
                      <v n="SetResetRef" t="SetResetRef">None</v>
                      <v n="PretendsToBeConnected">false</v>
                      <v n="Id">382L</v>
                    </o>
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"Site.stBuildingLighting"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">383L</v>
                    </o>
                    <v n="PageArea">3</v>
                    <v n="Bounds">"4, 18, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">381L</v>
                  </o>
                  <o t="CFCBoxElement">
                    <o n="Inputs" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCInputPin">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="IsExtensiblePin">false</v>
                          <v n="ProcessValue">""</v>
                          <v n="Access" t="ProcessValueAccess">None</v>
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">385L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Outputs" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <o n="Texts" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCText">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"xData"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">386L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"FB_BA_RawPublisher"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">387L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"BuildingLighting"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">388L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Parameters" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCParameter">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Identifier">"bEnPublish"</v>
                          <n n="Value" />
                          <n n="InitialValue" />
                          <o n="Type" t="BoolType">
                            <v n="Compiled">false</v>
                          </o>
                          <v n="Origin" t="ParameterOrigin">Project</v>
                          <v n="Id">389L</v>
                        </o>
                      </l2>
                    </o>
                    <n n="PreparedParameters" />
                    <v n="PageArea">0</v>
                    <v n="Bounds">"18, 16, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="EnEno">false</v>
                    <v n="KindOfCall" t="KindOfCall">FunctionBlock</v>
                    <v n="ContainsExtensibleInputs">false</v>
                    <v n="Forced">false</v>
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">384L</v>
                  </o>
                </l2>
              </o>
              <o n="ParameterInitializationMethodGenerator" t="CFCParameterInitializationMethodObject">
                <v n="GuidPOU">{33d7c9fe-8bd7-4ed5-83fd-28d85634786d}</v>
                <v n="GuidParentObject">{dfa5c561-43c6-4aa0-b664-dc4628b7cadf}</v>
                <v n="MethodName">"__InitializeParameters_FB_BA_AdsComServer_Room"</v>
                <v n="ReturnType">"BOOL"</v>
              </o>
              <o n="RoutingPathTable" t="CFCRoutingPathTable">
                <d2 n="InnerDictionary" ckt="CFCRoutingConnection" cvt="CFCPointList">
                  <o>
                    <v n="ConnectionId">135L</v>
                    <o n="StartPoint" t="CFCPoint">
                      <v n="X">15</v>
                      <v n="Y">6</v>
                      <v n="IsJoint">false</v>
                      <v n="Flags">0</v>
                    </o>
                    <v n="Unroutable">false</v>
                    <n n="CorrespondingPageId" />
                    <v n="Locked">false</v>
                  </o>
                  <o>
                    <l2 n="InnerList" cet="CFCPoint">
                      <o>
                        <v n="X">15</v>
                        <v n="Y">6</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">68</v>
                      </o>
                      <o>
                        <v n="X">17</v>
                        <v n="Y">6</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">97</v>
                      </o>
                    </l2>
                  </o>
                  <o>
                    <v n="ConnectionId">390L</v>
                    <o n="StartPoint" t="CFCPoint">
                      <v n="X">14</v>
                      <v n="Y">18</v>
                      <v n="IsJoint">false</v>
                      <v n="Flags">0</v>
                    </o>
                    <v n="Unroutable">false</v>
                    <n n="CorrespondingPageId" />
                    <v n="Locked">false</v>
                  </o>
                  <o>
                    <l2 n="InnerList" cet="CFCPoint">
                      <o>
                        <v n="X">14</v>
                        <v n="Y">18</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">68</v>
                      </o>
                      <o>
                        <v n="X">17</v>
                        <v n="Y">18</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">97</v>
                      </o>
                    </l2>
                  </o>
                  <o>
                    <v n="ConnectionId">173L</v>
                    <o n="StartPoint" t="CFCPoint">
                      <v n="X">14</v>
                      <v n="Y">12</v>
                      <v n="IsJoint">false</v>
                      <v n="Flags">0</v>
                    </o>
                    <v n="Unroutable">false</v>
                    <n n="CorrespondingPageId" />
                    <v n="Locked">false</v>
                  </o>
                  <o>
                    <l2 n="InnerList" cet="CFCPoint">
                      <o>
                        <v n="X">14</v>
                        <v n="Y">12</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">100</v>
                      </o>
                      <o>
                        <v n="X">17</v>
                        <v n="Y">12</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">97</v>
                      </o>
                    </l2>
                  </o>
                </d2>
              </o>
              <v n="AutoSizeCanvas">true</v>
              <v n="CanvasWidth">30</v>
              <v n="CanvasHeight">22</v>
            </o>
          </Data>
          <TypeList>
            <Type n="Boolean">System.Boolean</Type>
            <Type n="BoolType">{fd373d9e-533d-4d69-ad04-82ccf513ff10}</Type>
            <Type n="CFCBoxElement">{f5becf35-b1f3-4274-b411-81d4b63a1516}</Type>
            <Type n="CFCConnection">{5ae2e111-ecff-4a21-b647-2d4da63f8db7}</Type>
            <Type n="CFCImplementationObject">{32d3375e-c010-41e2-9e43-b2fbf4f2b374}</Type>
            <Type n="CFCInputElement">{d51129f5-df27-4886-99d1-c564d2e2c1f6}</Type>
            <Type n="CFCInputPin">{c994f6e0-311a-4a1c-bc38-75fe34892406}</Type>
            <Type n="CFCItemList">{cd57ba20-558b-4b98-96c1-73c6000c3087}</Type>
            <Type n="CFCOutputPin">{65582d84-cf18-4ca0-be59-bf5a3d00b8f8}</Type>
            <Type n="CFCParameter">{16471219-97ce-4580-8682-e60492a6d970}</Type>
            <Type n="CFCParameterInitializationMethodObject">{f13d20a6-591c-4ca8-9a3d-8574380b6bcc}</Type>
            <Type n="CFCPoint">{b3e42b54-b8f2-45d3-825d-747f82f244a0}</Type>
            <Type n="CFCPointList">{584effbc-813e-443a-bf78-ad9c8d49db41}</Type>
            <Type n="CFCRoutingConnection">{93c117eb-0884-403b-b01e-28b89f47e041}</Type>
            <Type n="CFCRoutingPathTable">{4b8bcc79-5980-4868-b49e-005a8148859b}</Type>
            <Type n="CFCText">{72f2b13f-5349-4a8a-bbe6-2bccf3f42179}</Type>
            <Type n="Guid">System.Guid</Type>
            <Type n="Int32">System.Int32</Type>
            <Type n="Int64">System.Int64</Type>
            <Type n="KindOfCall">{77f43dfe-ca6a-4869-828f-7609d8ed6ea6}</Type>
            <Type n="ParameterOrigin">{00f7522c-f616-4f07-a530-7175f7cba90b}</Type>
            <Type n="ProcessValueAccess">{88453c7d-d652-4a27-a1b0-a1953be49a5c}</Type>
            <Type n="SetReset">{24449d48-c96a-49c4-b9d1-a4ea34aedce3}</Type>
            <Type n="SetResetRef">{233bc97c-69fe-4d29-b40e-a9a9b854044e}</Type>
            <Type n="String">System.String</Type>
          </TypeList>
        </XmlArchive>
      </CFC>
    </Implementation>
  </POU>
</TcPlcObject>